tests/unit-compatibility-test/fixtures/sonarqube-dce/ingress-with-controller.yaml
---
# Source: sonarqube-dce/templates/pod-disruption-budget.yaml
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  name: ingress-with-controller.yaml-sonarqube-dce-search
  labels:
    app: sonarqube-dce
    chart: sonarqube-dce-2026.1.6
    release: ingress-with-controller.yaml
    heritage: Helm
spec:
  minAvailable: 2

  selector:
    matchLabels:
      sonarqube.datacenter/type: "search"
---
# Source: sonarqube-dce/templates/pod-disruption-budget.yaml
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  name: ingress-with-controller.yaml-sonarqube-dce-app
  labels:
    app: sonarqube-dce
    chart: sonarqube-dce-2026.1.6
    release: ingress-with-controller.yaml
    heritage: Helm
spec:
  minAvailable: 1

  selector:
    matchLabels:
      sonarqube.datacenter/type: "app"
---
# Source: sonarqube-dce/charts/ingress-nginx/templates/controller-serviceaccount.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  labels:
    helm.sh/chart: ingress-nginx-4.14.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-with-controller.yaml
    app.kubernetes.io/version: "1.14.3"
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-with-controller.yaml-ingress-nginx
  namespace: default
automountServiceAccountToken: true
---
# Source: sonarqube-dce/templates/secret.yaml
apiVersion: v1
kind: Secret
metadata:
  name: ingress-with-controller.yaml-sonarqube-dce-monitoring-passcode
  labels:
    app: sonarqube-dce
    chart: sonarqube-dce-2026.1.6
    release: ingress-with-controller.yaml
    heritage: Helm
type: Opaque
data:
  SONAR_WEB_SYSTEMPASSCODE: "dGVzdA=="
---
# Source: sonarqube-dce/templates/secret.yaml
apiVersion: v1
kind: Secret
metadata:
  name: ingress-with-controller.yaml-sonarqube-dce
  labels:
    app: sonarqube-dce
    chart: sonarqube-dce-2026.1.6
    release: ingress-with-controller.yaml
    heritage: Helm
type: Opaque
data:
  jdbc-password: "cGFzcw=="
---
# Source: sonarqube-dce/templates/secret.yaml
apiVersion: v1
kind: Secret
metadata:
  name: ingress-with-controller.yaml-sonarqube-dce-jwt
  labels:
    app: sonarqube-dce
    chart: sonarqube-dce-2026.1.6
    release: ingress-with-controller.yaml
    heritage: Helm
type: Opaque
data:
  SONAR_AUTH_JWTBASE64HS256SECRET: "c29tZS1zZWNyZXQ="
---
# Source: sonarqube-dce/templates/secret.yaml
---
apiVersion: v1
kind: Secret
metadata:
  name: ingress-with-controller.yaml-sonarqube-dce-http-proxies
  labels:
    app: sonarqube-dce
    chart: sonarqube-dce-2026.1.6
    release: ingress-with-controller.yaml
    heritage: Helm
type: Opaque
stringData:
  PLUGINS-HTTP-PROXY: ""
  PLUGINS-HTTPS-PROXY: ""
  PLUGINS-NO-PROXY: ""
  PROMETHEUS-EXPORTER-HTTP-PROXY: ""
  PROMETHEUS-EXPORTER-HTTPS-PROXY: ""
  PROMETHEUS-EXPORTER-NO-PROXY: ""
---
# Source: sonarqube-dce/charts/ingress-nginx/templates/controller-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  labels:
    helm.sh/chart: ingress-nginx-4.14.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-with-controller.yaml
    app.kubernetes.io/version: "1.14.3"
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-with-controller.yaml-ingress-nginx-controller
  namespace: default
data:
---
# Source: sonarqube-dce/templates/config.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: ingress-with-controller.yaml-sonarqube-dce-app-config
  labels:
    app: sonarqube-dce
    chart: sonarqube-dce-2026.1.6
    release: ingress-with-controller.yaml
    heritage: Helm
data:
  sonar.properties: |
---
# Source: sonarqube-dce/templates/config.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: ingress-with-controller.yaml-sonarqube-dce-search-config
  labels:
    app: sonarqube-dce
    chart: sonarqube-dce-2026.1.6
    release: ingress-with-controller.yaml
    heritage: Helm
data:
  sonar.properties: |
---
# Source: sonarqube-dce/templates/init-fs.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: ingress-with-controller.yaml-sonarqube-dce-init-fs
  labels:
    app: sonarqube-dce
    chart: sonarqube-dce-2026.1.6
    release: ingress-with-controller.yaml
    heritage: Helm
data:
  init_fs.sh: |-
    chown -R 1000:0 /opt/sonarqube/data
    chown -R 1000:0 /opt/sonarqube/temp
    chown -R 1000:0 /opt/sonarqube/logs
---
# Source: sonarqube-dce/templates/init-sysctl.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: ingress-with-controller.yaml-sonarqube-dce-init-sysctl
  labels:
    app: sonarqube-dce
    chart: sonarqube-dce-2026.1.6
    release: ingress-with-controller.yaml
    heritage: Helm
data:
  init_sysctl.sh: |-
    set -o errexit
    set -o xtrace
    vmMaxMapCount=524288
    if [[ "$(sysctl -n vm.max_map_count)" -lt $vmMaxMapCount ]]; then
      sysctl -w vm.max_map_count=$vmMaxMapCount
      if [[ "$(sysctl -n vm.max_map_count)" -lt $vmMaxMapCount ]]; then
        echo "Failed to set initSysctl.vmMaxMapCount"; exit 1
      fi
    fi
    fsFileMax=131072
    if [[ "$(sysctl -n fs.file-max)" -lt $fsFileMax ]]; then
      sysctl -w fs.file-max=$fsFileMax
      if [[ "$(sysctl -n fs.file-max)" -lt $fsFileMax ]]; then
        echo "Failed to set initSysctl.fsFileMax"; exit 1
      fi
    fi
    nofile=131072
    if [[ "$(ulimit -n)" != "unlimited" ]]; then
      if [[ "$(ulimit -n)" -lt $nofile ]]; then
        ulimit -n $nofile
        if [[ "$(ulimit -n)" -lt $nofile ]]; then
          echo "Failed to set initSysctl.nofile"; exit 1
        fi
      fi
    fi
    nproc=8192
    if [[ "$(ulimit -u)" != "unlimited" ]]; then
      if [[ "$(ulimit -u)" -lt $nproc ]]; then
        ulimit -u $nproc
        if [[ "$(ulimit -u)" -lt $nproc ]]; then
          echo "Failed to set initSysctl.nproc"; exit 1
        fi
      fi
    fi
---
# Source: sonarqube-dce/templates/install-plugins.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: ingress-with-controller.yaml-sonarqube-dce-install-plugins
  labels:
    app: sonarqube-dce
    chart: sonarqube-dce-2026.1.6
    release: ingress-with-controller.yaml
    heritage: Helm
data:
  install_plugins.sh: |-
---
# Source: sonarqube-dce/templates/jdbc-config.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: ingress-with-controller.yaml-sonarqube-dce-jdbc-config
  labels:
    app: sonarqube-dce
    chart: sonarqube-dce-2026.1.6
    release: ingress-with-controller.yaml
    heritage: Helm
data:
  SONAR_JDBC_USERNAME: "user"
  SONAR_JDBC_URL: "jdbc:postgresql://myPostgres/myDatabase?socketTimeout=1500"
---
# Source: sonarqube-dce/charts/ingress-nginx/templates/clusterrole.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  labels:
    helm.sh/chart: ingress-nginx-4.14.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-with-controller.yaml
    app.kubernetes.io/version: "1.14.3"
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/managed-by: Helm
  name: ingress-with-controller.yaml-ingress-nginx
rules:
  - apiGroups:
      - ""
    resources:
      - configmaps
      - endpoints
      - nodes
      - pods
      - secrets
      - namespaces
    verbs:
      - list
      - watch
  - apiGroups:
      - coordination.k8s.io
    resources:
      - leases
    verbs:
      - list
      - watch
  - apiGroups:
      - ""
    resources:
      - nodes
    verbs:
      - get
  - apiGroups:
      - ""
    resources:
      - services
    verbs:
      - get
      - list
      - watch
  - apiGroups:
      - networking.k8s.io
    resources:
      - ingresses
    verbs:
      - get
      - list
      - watch
  - apiGroups:
      - ""
    resources:
      - events
    verbs:
      - create
      - patch
  - apiGroups:
      - networking.k8s.io
    resources:
      - ingresses/status
    verbs:
      - update
  - apiGroups:
      - networking.k8s.io
    resources:
      - ingressclasses
    verbs:
      - get
      - list
      - watch
  - apiGroups:
      - discovery.k8s.io
    resources:
      - endpointslices
    verbs:
      - list
      - watch
      - get
---
# Source: sonarqube-dce/charts/ingress-nginx/templates/clusterrolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  labels:
    helm.sh/chart: ingress-nginx-4.14.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-with-controller.yaml
    app.kubernetes.io/version: "1.14.3"
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/managed-by: Helm
  name: ingress-with-controller.yaml-ingress-nginx
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: ingress-with-controller.yaml-ingress-nginx
subjects:
  - kind: ServiceAccount
    name: ingress-with-controller.yaml-ingress-nginx
    namespace: default
---
# Source: sonarqube-dce/charts/ingress-nginx/templates/controller-role.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  labels:
    helm.sh/chart: ingress-nginx-4.14.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-with-controller.yaml
    app.kubernetes.io/version: "1.14.3"
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-with-controller.yaml-ingress-nginx
  namespace: default
rules:
  - apiGroups:
      - ""
    resources:
      - namespaces
    verbs:
      - get
  - apiGroups:
      - ""
    resources:
      - configmaps
      - pods
      - secrets
      - endpoints
    verbs:
      - get
      - list
      - watch
  - apiGroups:
      - ""
    resources:
      - services
    verbs:
      - get
      - list
      - watch
  - apiGroups:
      - networking.k8s.io
    resources:
      - ingresses
    verbs:
      - get
      - list
      - watch
  # Omit Ingress status permissions if `--update-status` is disabled.
  - apiGroups:
      - networking.k8s.io
    resources:
      - ingresses/status
    verbs:
      - update
  - apiGroups:
      - networking.k8s.io
    resources:
      - ingressclasses
    verbs:
      - get
      - list
      - watch
  - apiGroups:
      - coordination.k8s.io
    resources:
      - leases
    resourceNames:
      - ingress-with-controller.yaml-ingress-nginx-leader
    verbs:
      - get
      - update
  - apiGroups:
      - coordination.k8s.io
    resources:
      - leases
    verbs:
      - create
  - apiGroups:
      - ""
    resources:
      - events
    verbs:
      - create
      - patch
  - apiGroups:
      - discovery.k8s.io
    resources:
      - endpointslices
    verbs:
      - list
      - watch
      - get
---
# Source: sonarqube-dce/charts/ingress-nginx/templates/controller-rolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  labels:
    helm.sh/chart: ingress-nginx-4.14.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-with-controller.yaml
    app.kubernetes.io/version: "1.14.3"
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-with-controller.yaml-ingress-nginx
  namespace: default
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: ingress-with-controller.yaml-ingress-nginx
subjects:
  - kind: ServiceAccount
    name: ingress-with-controller.yaml-ingress-nginx
    namespace: default
---
# Source: sonarqube-dce/charts/ingress-nginx/templates/controller-service-webhook.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    helm.sh/chart: ingress-nginx-4.14.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-with-controller.yaml
    app.kubernetes.io/version: "1.14.3"
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-with-controller.yaml-ingress-nginx-controller-admission
  namespace: default
spec:
  type: ClusterIP
  ports:
    - name: https-webhook
      port: 443
      targetPort: webhook
      appProtocol: https
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-with-controller.yaml
    app.kubernetes.io/component: controller
---
# Source: sonarqube-dce/charts/ingress-nginx/templates/controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    helm.sh/chart: ingress-nginx-4.14.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-with-controller.yaml
    app.kubernetes.io/version: "1.14.3"
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-with-controller.yaml-ingress-nginx-controller
  namespace: default
spec:
  type: LoadBalancer
  ipFamilyPolicy: SingleStack
  ipFamilies: 
    - IPv4
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
      appProtocol: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
      appProtocol: https
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-with-controller.yaml
    app.kubernetes.io/component: controller
---
# Source: sonarqube-dce/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-with-controller.yaml-sonarqube-dce
  labels:
    app: sonarqube-dce
    chart: sonarqube-dce-2026.1.6
    release: ingress-with-controller.yaml
    heritage: Helm

spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: sonarqube-dce
    release: ingress-with-controller.yaml
---
# Source: sonarqube-dce/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-with-controller.yaml-sonarqube-dce-headless
  labels:
    app: sonarqube-dce
    chart: sonarqube-dce-2026.1.6
    release: ingress-with-controller.yaml
    heritage: Helm

spec:
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - port: 9003
      targetPort: hazelcast
      protocol: TCP
      appProtocol: tcp
      name: hazelcast
  selector:
    app: sonarqube-dce
    release: ingress-with-controller.yaml
---
# Source: sonarqube-dce/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-with-controller.yaml-sonarqube-dce-search
  labels:
    app: sonarqube-dce
    chart: sonarqube-dce-2026.1.6
    release: ingress-with-controller.yaml
    heritage: Helm

spec:
  type: ClusterIP
  ports:
    - port: 9001
      targetPort: search-port
      protocol: TCP
      name: search
    - port: 9002
      targetPort: es-port
      protocol: TCP
      name: es
  selector:
    app: sonarqube-dce-search
    release: ingress-with-controller.yaml
---
# Source: sonarqube-dce/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-with-controller.yaml-sonarqube-dce-search-headless
  labels:
    app: sonarqube-dce
    chart: sonarqube-dce-2026.1.6
    release: ingress-with-controller.yaml
    heritage: Helm

spec:
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - port: 9001
      targetPort: search-port
      protocol: TCP
      name: search
    - port: 9002
      targetPort: es-port
      protocol: TCP
      name: es
  selector:
    app: sonarqube-dce-search
    release: ingress-with-controller.yaml
---
# Source: sonarqube-dce/charts/ingress-nginx/templates/controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    helm.sh/chart: ingress-nginx-4.14.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-with-controller.yaml
    app.kubernetes.io/version: "1.14.3"
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-with-controller.yaml-ingress-nginx-controller
  namespace: default
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-with-controller.yaml
      app.kubernetes.io/component: controller
  replicas: 1
  revisionHistoryLimit: 10
  minReadySeconds: 0
  template:
    metadata:
      labels:
        helm.sh/chart: ingress-nginx-4.14.3
        app.kubernetes.io/name: ingress-nginx
        app.kubernetes.io/instance: ingress-with-controller.yaml
        app.kubernetes.io/version: "1.14.3"
        app.kubernetes.io/part-of: ingress-nginx
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: controller
    spec:
      dnsPolicy: ClusterFirst
      containers:
        - name: controller
          image: registry.k8s.io/ingress-nginx/controller:v1.14.3@sha256:82917be97c0939f6ada1717bb39aa7e66c229d6cfb10dcfc8f1bd42f9efe0f81
          imagePullPolicy: IfNotPresent
          lifecycle: 
            preStop:
              exec:
                command:
                - /wait-shutdown
          args: 
            - /nginx-ingress-controller
            - --publish-service=$(POD_NAMESPACE)/ingress-with-controller.yaml-ingress-nginx-controller
            - --election-id=ingress-with-controller.yaml-ingress-nginx-leader
            - --controller-class=k8s.io/ingress-nginx
            - --ingress-class=nginx
            - --configmap=$(POD_NAMESPACE)/ingress-with-controller.yaml-ingress-nginx-controller
            - --validating-webhook=:8443
            - --validating-webhook-certificate=/usr/local/certificates/cert
            - --validating-webhook-key=/usr/local/certificates/key
          securityContext: 
            runAsNonRoot: true
            runAsUser: 101
            runAsGroup: 82
            allowPrivilegeEscalation: false
            seccompProfile: 
              type: RuntimeDefault
            capabilities:
              drop:
              - ALL
              add:
              - NET_BIND_SERVICE
            readOnlyRootFilesystem: false
          env:
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: POD_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: LD_PRELOAD
              value: /usr/local/lib/libmimalloc.so
          livenessProbe: 
            failureThreshold: 5
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe: 
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
            - name: https
              containerPort: 443
              protocol: TCP
            - name: webhook
              containerPort: 8443
              protocol: TCP
          volumeMounts:
            - name: webhook-cert
              mountPath: /usr/local/certificates/
              readOnly: true
          resources: 
            requests:
              cpu: 100m
              memory: 90Mi
      nodeSelector: 
        kubernetes.io/os: linux
      serviceAccountName: ingress-with-controller.yaml-ingress-nginx
      automountServiceAccountToken: true
      terminationGracePeriodSeconds: 300
      volumes:
        - name: webhook-cert
          secret:
            secretName: ingress-with-controller.yaml-ingress-nginx-admission
---
# Source: sonarqube-dce/templates/sonarqube-application.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-with-controller.yaml-sonarqube-dce-app
  labels:
    app: sonarqube-dce
    chart: sonarqube-dce-2026.1.6
    release: ingress-with-controller.yaml
    heritage: Helm
    app.kubernetes.io/name: ingress-with-controller.yaml
    sonarqube.datacenter/type: "app"
    app.kubernetes.io/instance: ingress-with-controller.yaml
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: sonarqube
    app.kubernetes.io/component: ingress-with-controller.yaml-sonarqube-dce
    app.kubernetes.io/version: "2026.1.6-datacenter-app"
spec:
  replicas: 2
  revisionHistoryLimit: 
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonarqube-dce
      release: ingress-with-controller.yaml
  template:
    metadata:
      labels:
        app: sonarqube-dce
        release: ingress-with-controller.yaml
        sonarqube.datacenter/type: "app"
      annotations:
        checksum/plugins: 46f2fd9ecc5575cb41b916cfc0158468f0449ae96bb631045b5201b900551e93
        checksum/config: 06f8e6a6f733f81aedeb7bd33a2a9b90a4bbbe25379e668104ddaa89af5b24d3
        checksum/secret: 6cd2d499f298eb19204d75a5388f17ea23d58ae296d50b3e5c1c04e29b837bf2
    spec:
      automountServiceAccountToken: false
      initContainers:
      securityContext:
        fsGroup: 0
      containers:
        - name: sonarqube-dce
          image: sonarqube:2026.1.6-datacenter-app
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
            - name: hazelcast
              containerPort: 9003
              protocol: TCP
          resources:
            limits:
              cpu: 800m
              ephemeral-storage: 512000M
              memory: 4096M
            requests:
              cpu: 400m
              ephemeral-storage: 1536M
              memory: 4096M
          env:
            - name: SONAR_WEB_CONTEXT
              value: /
            - name: SONAR_WEB_JAVAOPTS
              value: ""
            - name: SONAR_CE_JAVAOPTS
              value: ""
            - name: SONAR_LOG_JSONOUTPUT
              value: "false"
            - name: SONAR_HELM_CHART_VERSION
              value: 2026.1.6
            - name: SONAR_CLUSTER_SEARCH_HOSTS
              value: "ingress-with-controller.yaml-sonarqube-dce-search"
            - name: SONAR_CLUSTER_KUBERNETES
              value: "true"
            - name: SONAR_CLUSTER_NODE_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: SONAR_CLUSTER_HOSTS
              value: "ingress-with-controller.yaml-sonarqube-dce-headless"
            - name: SONAR_AUTH_JWTBASE64HS256SECRET
              valueFrom:
                secretKeyRef:
                  name: "ingress-with-controller.yaml-sonarqube-dce-jwt"
                  key: SONAR_AUTH_JWTBASE64HS256SECRET
            - name: SONAR_JDBC_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: ingress-with-controller.yaml-sonarqube-dce
                  key: jdbc-password
            - name: SONAR_WEB_SYSTEMPASSCODE
              valueFrom:
                secretKeyRef:
                  name: ingress-with-controller.yaml-sonarqube-dce-monitoring-passcode
                  key: SONAR_WEB_SYSTEMPASSCODE
          envFrom:
            - configMapRef:
                name: ingress-with-controller.yaml-sonarqube-dce-jdbc-config
          livenessProbe:
            exec:
              command:
              - sh
              - -c
              - |-
                host="$(hostname -i || echo '127.0.0.1')"
                wget --no-proxy --quiet -O /dev/null --timeout=1 --header="X-Sonar-Passcode: $SONAR_WEB_SYSTEMPASSCODE" "http://${host}:9000/api/system/liveness"
            failureThreshold: 6
            initialDelaySeconds: 0
            periodSeconds: 30
            timeoutSeconds: 1
          readinessProbe:
            exec:
              command:
              - sh
              - -c
              - |-
                #!/bin/bash
                # A Sonarqube container is considered ready if the status is UP, DB_MIGRATION_NEEDED or DB_MIGRATION_RUNNING
                # status about migration are added to prevent the node to be kill while sonarqube is upgrading the database.
                host="$(hostname -i || echo '127.0.0.1')"
                if wget --no-proxy -qO- http://${host}:9000/api/system/status | grep -q -e '"status":"UP"' -e '"status":"DB_MIGRATION_NEEDED"' -e '"status":"DB_MIGRATION_RUNNING"'; then
                  exit 0
                fi
                exit 1
            failureThreshold: 8
            initialDelaySeconds: 0
            periodSeconds: 30
            timeoutSeconds: 1
          startupProbe:
            httpGet:
              scheme: HTTP
              path: /api/system/status
              port: http
            initialDelaySeconds: 45
            periodSeconds: 10
            failureThreshold: 32
            timeoutSeconds: 1
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            runAsGroup: 0
            runAsNonRoot: true
            runAsUser: 1000
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /opt/sonarqube/data
              name: sonarqube
              subPath: data
            - mountPath: /opt/sonarqube/temp
              name: sonarqube
              subPath: temp
            - mountPath: /opt/sonarqube/logs
              name: sonarqube
              subPath: logs
            - mountPath: /tmp
              name: tmp-dir
      serviceAccountName: default
      volumes:
      
      - name: install-plugins
        configMap:
          name: ingress-with-controller.yaml-sonarqube-dce-install-plugins
          items:
            - key: install_plugins.sh
              path: install_plugins.sh
      - name: sonarqube
        emptyDir:
          {}
      - name : tmp-dir
        emptyDir:
          {}
---
# Source: sonarqube-dce/templates/sonarqube-search.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ingress-with-controller.yaml-sonarqube-dce-search
  labels:
    app: sonarqube-dce
    chart: sonarqube-dce-2026.1.6
    release: ingress-with-controller.yaml
    heritage: Helm
    app.kubernetes.io/name: "ingress-with-controller.yaml"
    sonarqube.datacenter/type: "search"
    app.kubernetes.io/instance: ingress-with-controller.yaml
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: sonarqube
    app.kubernetes.io/component: ingress-with-controller.yaml-sonarqube-dce
    app.kubernetes.io/version: "2026.1.6-datacenter-search"
spec:
  podManagementPolicy : Parallel
  replicas: 3
  serviceName: ingress-with-controller.yaml-sonarqube-dce-search
  selector:
    matchLabels:
      app: sonarqube-dce-search
      release: ingress-with-controller.yaml
  volumeClaimTemplates:
  - metadata:
      name: ingress-with-controller.yaml-sonarqube-dce
      labels:
        release: ingress-with-controller.yaml
        chart: "sonarqube-dce"
        app: "ingress-with-controller.yaml-sonarqube-dce"
    spec:
      accessModes:
        - "ReadWriteOnce"
      resources:
        requests:
          storage: "5Gi"
  template:
    metadata:
      labels:
        app: sonarqube-dce-search
        release: ingress-with-controller.yaml
        sonarqube.datacenter/type: "search"
      annotations:
        checksum/init-sysctl: e409d1a983e5b40ba2e1f1920240d5c21e2b1ea453c739cba4a3807be9efeaf7
        checksum/init-fs: 4625db8142afb7fee75b9260416a71171f010dcec10dd1480665b19a412b7693
        checksum/config: 06f8e6a6f733f81aedeb7bd33a2a9b90a4bbbe25379e668104ddaa89af5b24d3
        checksum/secret: 6cd2d499f298eb19204d75a5388f17ea23d58ae296d50b3e5c1c04e29b837bf2
    spec:
      automountServiceAccountToken: false
      initContainers:
        - name: init-sysctl
          image: sonarqube:2026.1.6-datacenter-app
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
            readOnlyRootFilesystem: true
            runAsUser: 0
          resources:
            {}
          command: ["/bin/bash",
            "-e",
            "/tmp/scripts/init_sysctl.sh"]
          volumeMounts:
            - name: init-sysctl
              mountPath: /tmp/scripts/
        - name: init-fs
          image: sonarqube:2026.1.6-datacenter-app
          imagePullPolicy: IfNotPresent
          securityContext:
            capabilities:
              add:
              - CHOWN
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 0
            runAsNonRoot: false
            runAsUser: 0
            seccompProfile:
              type: RuntimeDefault
          resources:
            {}
          command: ["sh",
            "-ex",
            "/tmp/scripts/init_fs.sh"]
          volumeMounts:
            - name: init-fs
              mountPath: /tmp/scripts/
            - mountPath: /opt/sonarqube/certs
              name: "ingress-with-controller.yaml-sonarqube-dce"
              subPath: certs
            - mountPath: /opt/sonarqube/data
              name: "ingress-with-controller.yaml-sonarqube-dce"
              subPath: data
            - mountPath: /opt/sonarqube/temp
              name: "ingress-with-controller.yaml-sonarqube-dce"
              subPath: temp
            - mountPath: /opt/sonarqube/logs
              name: "ingress-with-controller.yaml-sonarqube-dce"
              subPath: logs
            - mountPath: /tmp
              name: tmp-dir
      securityContext:
        fsGroup: 0
      containers:
        - name: sonarqube-dce-search
          image: "sonarqube:2026.1.6-datacenter-search"
          imagePullPolicy: IfNotPresent
          ports:
            - name: search-port
              containerPort: 9001
              protocol: TCP
            - name: es-port
              containerPort: 9002
              protocol: TCP
          resources:
            limits:
              cpu: 800m
              ephemeral-storage: 512000M
              memory: 3072M
            requests:
              cpu: 400m
              ephemeral-storage: 1536M
              memory: 3072M
          env:
            - name: SONAR_LOG_JSONOUTPUT
              value: "false"
            - name: SONAR_CLUSTER_ES_HOSTS
              value: "ingress-with-controller.yaml-sonarqube-dce-search-0,ingress-with-controller.yaml-sonarqube-dce-search-1,ingress-with-controller.yaml-sonarqube-dce-search-2,"
            - name: SONAR_CLUSTER_ES_DISCOVERY_SEED_HOSTS
              value: "ingress-with-controller.yaml-sonarqube-dce-search-headless"
            - name: SONAR_CLUSTER_NODE_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
          livenessProbe:
            exec:
              command:
              - sh
              - -c
              - |
                #!/bin/bash
                # A Sonarqube search node container is considered live if http call returns 200
                host="$(hostname -i || echo '127.0.0.1')"
                if wget --auth-no-challenge --no-proxy -qO- "http://${host}:9001/_cluster/health?local=true" | grep -q -e '"status":"green"' -e '"status":"yellow"'; then
                  exit 0
                fi
                exit 1
            initialDelaySeconds: 0
            periodSeconds: 30
            failureThreshold: 6
            timeoutSeconds: 1
          readinessProbe:
            exec:
              command:
              - sh
              - -c
              - |
                #!/bin/bash
                # A Sonarqube search node container is considered ready if the status of embedded ES is green or yellow
                host="$(hostname -i || echo '127.0.0.1')"
                if wget --auth-no-challenge --no-proxy -qO- "http://${host}:9001/_cluster/health?wait_for_status=yellow&timeout=50s" | grep -q -e '"status":"green"' -e '"status":"yellow"'; then
                  exit 0
                fi
                exit 1
            initialDelaySeconds: 0
            periodSeconds: 30
            failureThreshold: 6
            timeoutSeconds: 1
          startupProbe:
            exec:
             command:
              - sh
              - -c
              - |
                #!/bin/bash
                # A Sonarqube search node container is considered started if http call returns 200
                host="$(hostname -i || echo '127.0.0.1')"
                if wget --auth-no-challenge --no-proxy -qO- "http://${host}:9001/_cluster/health?local=true" | grep -q -e '"status":"green"' -e '"status":"yellow"'; then
                  exit 0
                fi
                exit 1
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 24
            timeoutSeconds: 1
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            runAsGroup: 0
            runAsNonRoot: true
            runAsUser: 1000
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /opt/sonarqube/certs
              name: "ingress-with-controller.yaml-sonarqube-dce"
              subPath: certs
              readOnly: true
            - mountPath: /opt/sonarqube/data
              name: "ingress-with-controller.yaml-sonarqube-dce"
              subPath: data
            - mountPath: /opt/sonarqube/temp
              name: "ingress-with-controller.yaml-sonarqube-dce"
              subPath: temp
            - mountPath: /opt/sonarqube/logs
              name: "ingress-with-controller.yaml-sonarqube-dce"
              subPath: logs
            - mountPath: /tmp
              name: tmp-dir
      serviceAccountName: default
      volumes:
      
      - name: init-sysctl
        configMap:
          name: ingress-with-controller.yaml-sonarqube-dce-init-sysctl
          items:
            - key: init_sysctl.sh
              path: init_sysctl.sh
      - name: init-fs
        configMap:
          name: ingress-with-controller.yaml-sonarqube-dce-init-fs
          items:
            - key: init_fs.sh
              path: init_fs.sh
      - name: "ingress-with-controller.yaml-sonarqube-dce"
      - name : tmp-dir
        emptyDir:
          {}
---
# Source: sonarqube-dce/charts/ingress-nginx/templates/controller-ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    helm.sh/chart: ingress-nginx-4.14.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-with-controller.yaml
    app.kubernetes.io/version: "1.14.3"
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
# Source: sonarqube-dce/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-controller.yaml-sonarqube-dce
  labels:
    app: sonarqube-dce
    chart: sonarqube-dce-2026.1.6
    release: ingress-with-controller.yaml
    heritage: Helm
    traffic-type: external
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "64m"
spec:
  ingressClassName: "nginx"
  rules:
  - host: sonarqube.your-org.com
    http:
      paths:
      - backend:
          service:
            name: someService
            port:
              number: 1010
        path: /
        pathType: ImplementationSpecific
  tls:
    - hosts:
      - chart-example.local
      secretName: chart-example-tls
---
# Source: sonarqube-dce/charts/ingress-nginx/templates/admission-webhooks/validating-webhook.yaml
# before changing this value, check the required kubernetes version
# https://kubernetes.io/docs/reference/access-authn-authz/extensible-admission-controllers/#prerequisites
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
  labels:
    helm.sh/chart: ingress-nginx-4.14.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-with-controller.yaml
    app.kubernetes.io/version: "1.14.3"
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: admission-webhook
  name: ingress-with-controller.yaml-ingress-nginx-admission
webhooks:
  - name: validate.nginx.ingress.kubernetes.io
    matchPolicy: Equivalent
    rules:
      - apiGroups:
          - networking.k8s.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - ingresses
    failurePolicy: Fail
    sideEffects: None
    admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: ingress-with-controller.yaml-ingress-nginx-controller-admission
        namespace: default
        port: 443
        path: /networking/v1/ingresses
---
# Source: sonarqube-dce/charts/ingress-nginx/templates/controller-poddisruptionbudget.yaml
# PDB is not supported for DaemonSets.
# https://github.com/kubernetes/kubernetes/issues/108124
---
# Source: sonarqube-dce/charts/ingress-nginx/templates/admission-webhooks/job-patch/serviceaccount.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: ingress-with-controller.yaml-ingress-nginx-admission
  namespace: default
  annotations:
    "helm.sh/hook": pre-install,pre-upgrade,post-install,post-upgrade
    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
  labels:
    helm.sh/chart: ingress-nginx-4.14.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-with-controller.yaml
    app.kubernetes.io/version: "1.14.3"
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: admission-webhook
automountServiceAccountToken: true
---
# Source: sonarqube-dce/charts/ingress-nginx/templates/admission-webhooks/job-patch/clusterrole.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: ingress-with-controller.yaml-ingress-nginx-admission
  annotations:
    "helm.sh/hook": pre-install,pre-upgrade,post-install,post-upgrade
    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
  labels:
    helm.sh/chart: ingress-nginx-4.14.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-with-controller.yaml
    app.kubernetes.io/version: "1.14.3"
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: admission-webhook
rules:
  - apiGroups:
      - admissionregistration.k8s.io
    resources:
      - validatingwebhookconfigurations
    verbs:
      - get
      - update
---
# Source: sonarqube-dce/charts/ingress-nginx/templates/admission-webhooks/job-patch/clusterrolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: ingress-with-controller.yaml-ingress-nginx-admission
  annotations:
    "helm.sh/hook": pre-install,pre-upgrade,post-install,post-upgrade
    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
  labels:
    helm.sh/chart: ingress-nginx-4.14.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-with-controller.yaml
    app.kubernetes.io/version: "1.14.3"
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: admission-webhook
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: ingress-with-controller.yaml-ingress-nginx-admission
subjects:
  - kind: ServiceAccount
    name: ingress-with-controller.yaml-ingress-nginx-admission
    namespace: default
---
# Source: sonarqube-dce/charts/ingress-nginx/templates/admission-webhooks/job-patch/role.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: ingress-with-controller.yaml-ingress-nginx-admission
  namespace: default
  annotations:
    "helm.sh/hook": pre-install,pre-upgrade,post-install,post-upgrade
    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
  labels:
    helm.sh/chart: ingress-nginx-4.14.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-with-controller.yaml
    app.kubernetes.io/version: "1.14.3"
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: admission-webhook
rules:
  - apiGroups:
      - ""
    resources:
      - secrets
    verbs:
      - get
      - create
---
# Source: sonarqube-dce/charts/ingress-nginx/templates/admission-webhooks/job-patch/rolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: ingress-with-controller.yaml-ingress-nginx-admission
  namespace: default
  annotations:
    "helm.sh/hook": pre-install,pre-upgrade,post-install,post-upgrade
    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
  labels:
    helm.sh/chart: ingress-nginx-4.14.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-with-controller.yaml
    app.kubernetes.io/version: "1.14.3"
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: admission-webhook
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: ingress-with-controller.yaml-ingress-nginx-admission
subjects:
  - kind: ServiceAccount
    name: ingress-with-controller.yaml-ingress-nginx-admission
    namespace: default
---
# Source: sonarqube-dce/templates/tests/sonarqube-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "ingress-with-controller.yaml-ui-test"
  annotations:
    "helm.sh/hook": test-success
    # Disable Istio sidecar injection for this test pod
    "sidecar.istio.io/inject": "false"
  labels:
    app: sonarqube-dce
    chart: sonarqube-dce-2026.1.6
    release: ingress-with-controller.yaml
    heritage: Helm
spec:
  automountServiceAccountToken: false
  containers:
    - name: ingress-with-controller.yaml-ui-test
      image: "sonarqube:2026.1.6-datacenter-app"
      imagePullPolicy: IfNotPresent
      command: ['wget']
      args: [
        '--retry-connrefused',
        '--waitretry=1',
        '--timeout=5',
        '-t',
        '1200',
        '-qO-',
        'ingress-with-controller.yaml-sonarqube-dce:9000/api/system/status'
        ]
      resources:
        limits:
          cpu: 500m
          ephemeral-storage: 1000M
          memory: 200M
        requests:
          cpu: 500m
          ephemeral-storage: 100M
          memory: 200M
  restartPolicy: Never
---
# Source: sonarqube-dce/charts/ingress-nginx/templates/admission-webhooks/job-patch/job-createSecret.yaml
apiVersion: batch/v1
kind: Job
metadata:
  name: ingress-with-controller.yaml-ingress-nginx-admission-create
  namespace: default
  annotations:
    "helm.sh/hook": pre-install,pre-upgrade
    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
  labels:
    helm.sh/chart: ingress-nginx-4.14.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-with-controller.yaml
    app.kubernetes.io/version: "1.14.3"
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: admission-webhook
spec:
  ttlSecondsAfterFinished: 0
  template:
    metadata:
      name: ingress-with-controller.yaml-ingress-nginx-admission-create
      labels:
        helm.sh/chart: ingress-nginx-4.14.3
        app.kubernetes.io/name: ingress-nginx
        app.kubernetes.io/instance: ingress-with-controller.yaml
        app.kubernetes.io/version: "1.14.3"
        app.kubernetes.io/part-of: ingress-nginx
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: admission-webhook
    spec:
      containers:
        - name: create
          image: registry.k8s.io/ingress-nginx/kube-webhook-certgen:v1.6.7@sha256:7c74a715af2c94cb734785b4d3ea1357b4f02b88e1e123c622a9cb68b62f669c
          imagePullPolicy: IfNotPresent
          args:
            - create
            - --host=ingress-with-controller.yaml-ingress-nginx-controller-admission,ingress-with-controller.yaml-ingress-nginx-controller-admission.$(POD_NAMESPACE).svc
            - --namespace=$(POD_NAMESPACE)
            - --secret-name=ingress-with-controller.yaml-ingress-nginx-admission
          env:
            - name: POD_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          securityContext: 
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 65532
            runAsNonRoot: true
            runAsUser: 65532
            seccompProfile:
              type: RuntimeDefault
      restartPolicy: OnFailure
      serviceAccountName: ingress-with-controller.yaml-ingress-nginx-admission
      automountServiceAccountToken: true
      nodeSelector: 
        kubernetes.io/os: linux
---
# Source: sonarqube-dce/charts/ingress-nginx/templates/admission-webhooks/job-patch/job-patchWebhook.yaml
apiVersion: batch/v1
kind: Job
metadata:
  name: ingress-with-controller.yaml-ingress-nginx-admission-patch
  namespace: default
  annotations:
    "helm.sh/hook": post-install,post-upgrade
    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
  labels:
    helm.sh/chart: ingress-nginx-4.14.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-with-controller.yaml
    app.kubernetes.io/version: "1.14.3"
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: admission-webhook
spec:
  ttlSecondsAfterFinished: 0
  template:
    metadata:
      name: ingress-with-controller.yaml-ingress-nginx-admission-patch
      labels:
        helm.sh/chart: ingress-nginx-4.14.3
        app.kubernetes.io/name: ingress-nginx
        app.kubernetes.io/instance: ingress-with-controller.yaml
        app.kubernetes.io/version: "1.14.3"
        app.kubernetes.io/part-of: ingress-nginx
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: admission-webhook
    spec:
      containers:
        - name: patch
          image: registry.k8s.io/ingress-nginx/kube-webhook-certgen:v1.6.7@sha256:7c74a715af2c94cb734785b4d3ea1357b4f02b88e1e123c622a9cb68b62f669c
          imagePullPolicy: IfNotPresent
          args:
            - patch
            - --webhook-name=ingress-with-controller.yaml-ingress-nginx-admission
            - --namespace=$(POD_NAMESPACE)
            - --patch-mutating=false
            - --secret-name=ingress-with-controller.yaml-ingress-nginx-admission
            - --patch-failure-policy=Fail
          env:
            - name: POD_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          securityContext: 
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 65532
            runAsNonRoot: true
            runAsUser: 65532
            seccompProfile:
              type: RuntimeDefault
      restartPolicy: OnFailure
      serviceAccountName: ingress-with-controller.yaml-ingress-nginx-admission
      automountServiceAccountToken: true
      nodeSelector: 
        kubernetes.io/os: linux
